--- a/html/index.html
+++ b/html/index.html
@@ -72,6 +72,12 @@
               <a href="#about" class="nav-link" data-animate="scrolling">Sobre mi</a>
             </li>
             <li class="nav-item">
+              <a href="#servicios" class="nav-link" data-animate="scrolling">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a href="#trabajos" class="nav-link" data-animate="scrolling">Trabajos</a>
+            </li>
+            <li class="nav-item">
               <a href="#contact" class="nav-link" data-animate="scrolling">Contacto</a>
             </li>
           </ul>
@@ -213,10 +219,10 @@
     </div>
   </div>
   
-  <div class="vg-page page-service">
-    <div class="container">
+  <div class="vg-page page-service" id="servicios">
+    <div class="container" >
       <div class="text-center wow fadeInUp">
-        <div class="badge badge-subhead">Servicios</div>
+        <div class="badge badge-subhead" >Servicios</div>
       </div>
       <h1 class="fw-normal text-center wow fadeInUp">¿Qué puedo hacer?</h1>
       <div class="row mt-5">
@@ -281,7 +287,7 @@
   </div>
   
   <!-- trabajos page -->
-  <div class="vg-page page-portfolio" id="portfolio">
+  <div class="vg-page page-portfolio" id="trabajos">
     <div class="container">
       <div class="text-center wow fadeInUp">
         <div class="badge badge-subhead">Works</div>
